Student Grade System

--- a/Practices of Applications/STUDENT GRADE SYSTEM.csproj
+++ b/Practices of Applications/STUDENT GRADE SYSTEM.csproj
@@ -46,14 +46,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbMarkRecordDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbMarkRecordDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmStudentPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmStudentPanel.Designer.cs">
+      <DependentUpon>FrmStudentPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmTeacherPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTeacherPanel.Designer.cs">
+      <DependentUpon>FrmTeacherPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmStudentPanel.resx">
+      <DependentUpon>FrmStudentPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTeacherPanel.resx">
+      <DependentUpon>FrmTeacherPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +89,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="DbMarkRecordDataSet.xsc">
+      <DependentUpon>DbMarkRecordDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DbMarkRecordDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DbMarkRecordDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DbMarkRecordDataSet.xss">
+      <DependentUpon>DbMarkRecordDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
